<resources>
    <string name="app_name">Стоматология</string>
    <string name="enter_phone_number">Укажите номер телефона</string>
    <string name="send_sms">Отправить смс</string>
    <string name="confirm">Подтвердить</string>
    <string name="enter_code_sms">Укажите код из SMS</string>
    <string name="send_sms_again">Прислать код повторно</string>
    <string name="sale_text_activity">Персональные акции, скидки и бонусы</string>
    <string name="history_text_activity">Историю своих посещений</string>
    <string name="auth_text_activity">Авторизируйтесь, чтобы видеть:</string>
    <string name="visit_price">Цена приема:</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="fragment_label_doctors">Врачи</string>
    <string name="fragment_label_services">Услуги</string>
    <string name="fragment_label_user_profile">Мой профиль</string>
    <string name="notifications">Уведомления</string>
    <string name="services">Услуги</string>
    <string name="watched">Просмотрено</string>
    <string name="notification">Уведомление</string>
    <string name="other_time">Другое время</string>
    <string name="next">Далее</string>
</resources>